-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8
-
Component/s: javafx
-
Environment:
Windows
This issue may be related to RT-27571. It was originally reported on the forum:
https://forums.oracle.com/message/11081063
The bug is that undecorated JavaFX stages cannot be minimized other than from code. Decoration button is missing (it's expected, as the window is undecorated), and clicking on the window button in the Windows taskbar doesn't minimize the window (which is not expected).
https://forums.oracle.com/message/11081063
The bug is that undecorated JavaFX stages cannot be minimized other than from code. Decoration button is missing (it's expected, as the window is undecorated), and clicking on the window button in the Windows taskbar doesn't minimize the window (which is not expected).
- duplicates
-
JDK-8089296 [Windows] Cannot iconify undecorated stage using Taskbar
-
- Closed
-
- links to