8088717: Win: UNDECORATED windows are not minimized with the taskbar button

Reviewed-by: kcr, pbansal